--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,10 +55,12 @@
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.8.2",
     "faucet": "0.0.1",
+    "fetch-mock": "^7.3.1",
     "file-loader": "^1.1.11",
     "ignore-styles": "^5.0.1",
     "istanbul": "^0.4.5",
     "mock-browser": "^0.92.14",
+    "node-fetch": "^2.3.0",
     "react-test-renderer": "^16.6.3",
     "style-loader": "^0.21.0",
     "tape": "^4.9.0",
